# you-know

./: index.html  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.trae/rules/: project_rules.md
app/: globals.css  layout.tsx  page.tsx
components/: ArticleListPanel.tsx  ArticleReaderPanel.tsx  RSSFeedPanel.tsx
components/ui/: input.tsx
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  tasks.md  techContext.md
services/: api.ts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20241231_001_initial_schema.sql  20250127000001_add_read_time.sql  20250726123123_init.sql
src-tauri/src/: commands.rs  database.rs  error.rs  lib.rs  main.rs  models.rs  rss.rs  tests.rs  utils.rs
